--- a/task7/Ruletė/Rulete.html
+++ b/task7/Ruletė/Rulete.html
@@ -167,56 +167,15 @@ library(&quot;prob&quot;)</code></pre>
 <pre><code>## The following objects are masked from 'package:base':
 ## 
 ##     intersect, setdiff, union</code></pre>
-<pre class="r"><code>probspace(roulette(1), makespace=TRUE)</code></pre>
-<pre><code>##    num color      probs
-## 1    0 Green 0.02702703
-## 2   26 Black 0.02702703
-## 3    3   Red 0.02702703
-## 4   35 Black 0.02702703
-## 5   12   Red 0.02702703
-## 6   28 Black 0.02702703
-## 7    7   Red 0.02702703
-## 8   29 Black 0.02702703
-## 9   18   Red 0.02702703
-## 10  22 Black 0.02702703
-## 11   9   Red 0.02702703
-## 12  31 Black 0.02702703
-## 13  14   Red 0.02702703
-## 14  20 Black 0.02702703
-## 15   1   Red 0.02702703
-## 16  33 Black 0.02702703
-## 17  16   Red 0.02702703
-## 18  24 Black 0.02702703
-## 19   5   Red 0.02702703
-## 20  10 Black 0.02702703
-## 21  23   Red 0.02702703
-## 22   8 Black 0.02702703
-## 23  30   Red 0.02702703
-## 24  11 Black 0.02702703
-## 25  36   Red 0.02702703
-## 26  13 Black 0.02702703
-## 27  27   Red 0.02702703
-## 28   6 Black 0.02702703
-## 29  34   Red 0.02702703
-## 30  17 Black 0.02702703
-## 31  25   Red 0.02702703
-## 32   2 Black 0.02702703
-## 33  21   Red 0.02702703
-## 34   4 Black 0.02702703
-## 35  19   Red 0.02702703
-## 36  15 Black 0.02702703
-## 37  32   Red 0.02702703</code></pre>
 <pre class="r"><code>n=10^4
-balansai &lt;- replicate(n, sum(sample(c(rep(-1, 14), rep(1, 13)), 1000, replace = TRUE)))
-teig.bal= sum((balansai&gt;0)==TRUE)
-prob=teig.bal/n
-prob</code></pre>
-<pre><code>## [1] 0.11</code></pre>
+balansai &lt;- replicate(n, sum(sample(c(-1,1), 1000, replace=TRUE, prob=c(19/37, 18/37))))
+mean(balansai&gt;0)</code></pre>
+<pre><code>## [1] 0.1947</code></pre>
 <p>P(balansas&lt;x) = 0.25</p>
 <pre class="r"><code>x=quantile(balansai, probs=0.25)
 x</code></pre>
 <pre><code>## 25% 
-## -58</code></pre>
+## -48</code></pre>
 <p>Nurašyta nuo zagnyte</p>
 
 
